# kairos_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
source/: CMakeLists.txt
source/editor/: abstract_command.h  command_history.h  command_interface.h  command_parser.cpp  command_parser.h  editor.cpp  editor.h  error_command.cpp  error_command.h  imgui_backend.cpp  imgui_backend.h  imgui_console_command.cpp  imgui_console_command.h  imgui_opengl_renderer.cpp  imgui_opengl_renderer.h  imgui_renderer.cpp  imgui_renderer.h  imgui_sdl_backend.cpp  imgui_sdl_backend.h  log_command.cpp  log_command.h
source/engine/: main.cpp
source/engine/animation/: animation.cpp  animation.h
source/engine/application/: application.h  command_line_parser.cpp  core_application.cpp  core_application.h  log_application.cpp  log_application.h  sdl_application.cpp  sdl_application.h
source/engine/core/: algorithms.h  animation.cpp  animation.h  application.cpp  application.h  command_line_parser.h  component.h  contract.cpp  contract.h  easing_curve.cpp  easing_curve.h  easing_lib.cpp  easing_lib.h  enum_utils.h  error.h  event.cpp  event.h  event_listener.cpp  event_listener.h  filesystem.cpp  filesystem.h  format.h  formattable.h  game.cpp  game.h  globals.cpp  globals.h  hash.h  json.h  kairos_lib.h  logger.cpp  logger.h  makable.h  mathlib.cpp  member_object.h  message.h  messages.cpp  messages.h  opengl_renderer.cpp  opengl_renderer.h  (+14 more)
source/engine/data/: data_algorithm.h
source/engine/event/: sdl_event.cpp  sdl_event.h
source/engine/graphics/: 2d_renderer_interface.h  abstract_2d_renderer.h  brush.cpp  brush.h  buffer_object.cpp  buffer_object.h  canvas.cpp  canvas.h  font.cpp  ibo.cpp  log_renderer.cpp  log_renderer.h  material.h  opengl_context.cpp  opengl_context.h  opengl_helper.cpp  opengl_helper.h  painter.cpp  painter.h  pen.cpp  pen.h  program.cpp  program.h  rendering_layer.cpp  rendering_layer.h  shader.cpp  shader.h  sprite.cpp  sprite.h  stb_image.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vertex.cpp  vertex.h
source/engine/graphics/interface/: drawable.h  drawable_gl_rect_component.h
source/engine/graphics/interfaces/: drawable_gl_rect_component.h
source/engine/graphics/opengl/: buffer_object.cpp  buffer_object.h  ibo.cpp  ibo.h  opengl_context.cpp  opengl_context.h  opengl_draw_data.cpp  opengl_draw_data.h  opengl_renderer.cpp  opengl_renderer.h  program.cpp  program.h  shader.cpp  shader.h  vao.cpp  vao.h
source/engine/graphics/opengl/SDL/: sdl_opengl_context.cpp  sdl_opengl_context.h
source/engine/graphics/service/: rendering_service.cpp  rendering_service.h  video_service.cpp  video_service.h
source/engine/graphics/service/detail/: rendering_service_helpers.cpp  rendering_service_helpers.h  video_service_helpers.cpp  video_service_helpers.h
source/engine/graphics/system/: shader_system.cpp  shader_system.h
source/engine/input/: controller.cpp  controller.h  input.h  keyboard.cpp  keyboard.h  mouse.h  sdl_input_backend.h
source/engine/input/service/: input_service.cpp  input_service.h
source/engine/input/service/detail/: input_service_helpers.cpp  input_service_helpers.h
source/engine/math/: axis.h  mathlib.cpp  mathlib.h  rect.h  requirements.txt  transform.cpp  transform.h
source/engine/math/components/: rect_component.h
source/engine/physics/: drag_force.cpp  drag_force.h  force.cpp  force.h  particle.cpp  particle.h  particle_force_registry.cpp  particle_force_registry.h  physics_world.cpp  physics_world.h  types.h
source/engine/serialization/: serialization_strategy.h  serializer.h
source/engine/systems/: shader_system.cpp  shader_system.h
source/engine/window/: sdl_window.cpp  sdl_window.h  window.cpp  window.h  window_params.h
source/gameplay/: game.cpp  game.h  main.cpp
source/tests/: core.h  test_window.cpp  tests.cpp
source/tests/functional_tests/: game_test.cpp  game_test.h  physics_functional_tests.cpp  physics_functional_tests.h
source/tests/unit_tests/: core.h  physics_tests.cpp  physics_tests.h
tests/: test_window.cpp
